wasmtime4j-comparison-tests/src/test/java/ai/tegmentum/wasmtime4j/comparison/generated/misc_testsuite/ImportTest.java
package ai.tegmentum.wasmtime4j.comparison.generated.misc_testsuite;

import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.DisplayName;
import static org.junit.jupiter.api.Assertions.*;

import java.io.InputStream;
import ai.tegmentum.wasmtime4j.*;

/**
 * Equivalent Java test for Wasmtime test: misc_testsuite::import
 *
 * Original source: import.wast:1
 * Category: misc_testsuite
 *
 * This test validates that wasmtime4j produces the same results as
 * the upstream Wasmtime implementation for this test case.
 */
public final class ImportTest {

  @Test
  @DisplayName("misc_testsuite::import")
  public void testImport() {
    // WAT code from original Wasmtime test:
    // (assert_invalid
    //   (component
    //     (import "host-return-two" (func $f (result u32)))
    //     (export "x" (func $f)))
    //   "component export `x` is a reexport of an imported function which is not implemented")
    // 
    // (assert_invalid
    //   (component
    //     (import "host-return-two" (instance))
    //   )
    //   "expected instance found func")
    // 
    // ;; empty instances don't need to be supplied by the host, even recursively
    // ;; empty instances.
    // (component
    //   (import "not-provided-by-the-host" (instance))
    //   (import "not-provided-by-the-host2" (instance
    //     (export "x" (instance))
    //   ))
    // )

    final String wat = """
        (assert_invalid
          (component
            (import "host-return-two" (func $f (result u32)))
            (export "x" (func $f)))
          "component export `x` is a reexport of an imported function which is not implemented")
        
        (assert_invalid
          (component
            (import "host-return-two" (instance))
          )
          "expected instance found func")
        
        ;; empty instances don't need to be supplied by the host, even recursively
        ;; empty instances.
        (component
          (import "not-provided-by-the-host" (instance))
          (import "not-provided-by-the-host2" (instance
            (export "x" (instance))
          ))
        )
    """;

    // TODO: Implement equivalent wasmtime4j test logic
    // 1. Create Engine
    // 2. Compile WAT to Module
    // 3. Instantiate Module
    // 4. Call exported functions
    // 5. Assert expected results

    fail("Test not yet implemented - awaiting test framework completion");
  }
}
